--- a/system/crud/templates/crud/home.html
+++ b/system/crud/templates/crud/home.html
@@ -1,60 +1,17 @@
-<!-- <!DOCTYPE html>
-{% load static %}
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'crud/css/home.css' %}">
-    <link rel="shortcut icon" href="{%  static 'crud/images/favicon.ico' %}" type="image/x-icon">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
-    <title>Home</title>
-</head>
-<body>
-  <header>
-    <div class="logo">
-      <a href="{% url 'crud:home' %}"><img src="{%  static 'crud/images/logo.svg' %}" alt="logo_camp.in"></a>
-    </div>
-    <div class="links-header">
-      <ul>
-        <p class="user">{{  request.user }}</p>
-        <li><a href="{% url 'crud:home' %}">home</a></li>
-        <li><a href="{% url 'crud:list_user' %}">listar users</a></li>
-        <li><a href="{% url 'crud:delete' %}">deletar</a></li>
-        <li><a href="{% url 'crud:editar' %}">editar</a></li>
-      </ul>
-    </div>
-  </header>
+{% extends "./base.html" %}
 
-  <main>
-    <div class="box">
-      <h1 class="title"> Bem Vindo {{ request.user }} </h1>
-      <p> aplicação CRUD </p>
-    </div>
-    
-    <article class="box">
-      <h1 class="title"> Mas afinal, o que é um CRUD?</h1>
-      <p>CRUD é um acrônimo para Create (criar), Read (ler), Update (atualizar) e Delete (excluir). É um conjunto de operações básicas que podem ser realizadas em um sistema de gerenciamento de banco de dados (DBMS), e que permitem manipular dados armazenados em uma base de dados.</p>
-      <p>O Create é usado para criar novos registros em um banco de dados, ou seja, para adicionar novas informações a uma tabela. O Read é usado para ler os registros existentes em uma tabela, permitindo que os dados sejam recuperados para fins de visualização ou processamento. O Update é usado para modificar os registros existentes em uma tabela, alterando os valores dos campos específicos. E o Delete é usado para remover os registros existentes em uma tabela, excluindo as informações armazenadas na base de dados.</p>
-      <p>Em resumo, o CRUD é uma das bases fundamentais de qualquer sistema de gerenciamento de banco de dados, e sua utilização é essencial para permitir que os usuários possam gerenciar e manipular dados de maneira eficiente e segura. Por meio dessas quatro operações básicas, é possível realizar uma ampla variedade de tarefas e manipulações de dados em um banco de dados, tornando o CRUD uma ferramenta essencial para qualquer aplicação que envolva o armazenamento e manipulação de informações.</p>
-    </article>
-  </main>
-  
-  <footer class="box flex-column text-center">
-    <div class="mb-30">
-      <p>criado por <b>Carlos Gabriel</b></p>
-    </div>
-    <div class="my-20 space">
-      <a class="mx-10" href="#"><img src="{%  static 'crud/images/github.png' %}" alt="logo_github"></a>
-      <a class="mx-10" href="#"><img src="{%  static 'crud/images/linkedin.png' %}" alt="logo_linkedin"></a>
-      <a class="mx-10" href="#"><img src="{%  static 'crud/images/instagram.png' %}" alt="logo_instagram"></a>
-    </div>
-  </footer>
-</body>
-</html> -->
+{% block content %}
+  <div class="box">
+    <h1 class="title"> Bem Vindo {{ request.user }} </h1>
+    <p> aplicação CRUD </p>
+  </div>
 
-{% extends "crud/base.html" %}
+  <article class="box">
+    <h1 class="title"> Mas afinal, o que é um CRUD?</h1>
+    <p>CRUD é um acrônimo para Create (criar), Read (ler), Update (atualizar) e Delete (excluir). É um conjunto de operações básicas que podem ser realizadas em um sistema de gerenciamento de banco de dados (DBMS), e que permitem manipular dados armazenados em uma base de dados.</p>
+    <p>O Create é usado para criar novos registros em um banco de dados, ou seja, para adicionar novas informações a uma tabela. O Read é usado para ler os registros existentes em uma tabela, permitindo que os dados sejam recuperados para fins de visualização ou processamento. O Update é usado para modificar os registros existentes em uma tabela, alterando os valores dos campos específicos. E o Delete é usado para remover os registros existentes em uma tabela, excluindo as informações armazenadas na base de dados.</p>
+    <p>Em resumo, o CRUD é uma das bases fundamentais de qualquer sistema de gerenciamento de banco de dados, e sua utilização é essencial para permitir que os usuários possam gerenciar e manipular dados de maneira eficiente e segura. Por meio dessas quatro operações básicas, é possível realizar uma ampla variedade de tarefas e manipulações de dados em um banco de dados, tornando o CRUD uma ferramenta essencial para qualquer aplicação que envolva o armazenamento e manipulação de informações.</p>
+  </article>
+{% endblock %}
+
 
