--- a/system/crud/templates/crud/Index.html
+++ b/system/crud/templates/crud/Index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-  <div class="box">
+  <div class="box-index">
     <div class="content">
       <div class="logo">
         <img src="{%  static 'crud/images/logo.svg' %}" alt="logo_camp.in">
@@ -41,8 +41,10 @@
               {% endif %}
             </div>
             <div class="resgatar">
-              <input class="check" type="checkbox" name="" id="lembre">
-              <label for="lembre">Lembre-me</label>
+              <div>
+                <input class="check" type="checkbox" name="" id="lembre">
+                <label for="lembre">Lembre-me</label>
+              </div>
               <a href=""><b>esqueci minha senha</b></a>
             </div>
             <input class="button mb" type="submit" value="ENTRAR">
