--- a/system/crud/templates/crud/registrer.html
+++ b/system/crud/templates/crud/registrer.html
@@ -13,6 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'crud/css/registrer.css' %}">
+    <link rel="stylesheet" href="{% static 'crud/css/base.css' %}">
     <link rel="shortcut icon" href="{%  static 'crud/images/favicon.ico' %}" type="image/x-icon">
 </head>
 <body>
