--- a/system/crud/static/crud/css/list_user.css
+++ b/system/crud/static/crud/css/list_user.css
@@ -1,15 +1,10 @@
 table{
-  margin-top: 30px;
   text-align: center;
-}
-
-.title{
-  font-family: Poppins, Sans-Serif;
-  color: var(--primary-color);
 }
 
 td, th{
   padding: 10px;
+  margin: 15px;
 }
 
 .user{
