--- a/system/crud/templates/crud/Index.html
+++ b/system/crud/templates/crud/Index.html
@@ -10,7 +10,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'crud/css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'crud/css/base.css' %}">
+    <link rel="stylesheet" href="{% static 'crud/css/login.css' %}">
     <link rel="shortcut icon" href="{%  static 'crud/images/favicon.ico' %}" type="image/x-icon">
 </head>
 <body>
@@ -41,7 +42,7 @@
               {% endif %}
             </div>
             <div class="resgatar">
-              <div>
+              <div class="flex">
                 <input class="check" type="checkbox" name="" id="lembre">
                 <label for="lembre">Lembre-me</label>
               </div>
