--- a/system/crud/templates/crud/base.html
+++ b/system/crud/templates/crud/base.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'crud/css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'crud/css/header.css' %}">
+    <link rel="stylesheet" href="{% static 'crud/css/base.css' %}">
     {% block styles %}{% endblock%}
     <link rel="shortcut icon" href="{%  static 'crud/images/favicon.ico' %}" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -34,7 +35,7 @@
     {% block content%}{% endblock %}
   </main>
 
-  <footer class="box flex-column text-center">
+  <footer class="box flex-column text-center w100">
     <div class="mb-30">
       <p>criado por <b>Carlos Gabriel</b></p>
     </div>
