--- a/system/crud/templates/crud/list_user.html
+++ b/system/crud/templates/crud/list_user.html
@@ -5,7 +5,7 @@
 {% block styles %} <link rel="stylesheet" href="{% static 'crud/css/list_user.css' %}"> {% endblock %}
    
   {% block content %}
-    <div class="box">
+    <div class="box center">
       <h1 class="title"> Listando os usuários </h1>
       <table>
         <thead>
