--- a/system/crud/templates/crud/registrer.html
+++ b/system/crud/templates/crud/registrer.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   
-  <div class="box">
+  <div class="box-register">
     <div class="content">
       <div class="logo">
         <a href="{% url 'crud:index' %}"><img src="{%  static 'crud/images/logo.svg' %}" alt="logo_camp.in"></a>
