--- a/system/crud/static/crud/css/header.css
+++ b/system/crud/static/crud/css/header.css
@@ -26,7 +26,7 @@ header{
     display: flex;
   }
   
-  .links-header > ul > li{
+  .links-header > ul > *{
     margin: 0 10px;
     list-style: none;
   }
@@ -50,5 +50,10 @@ header{
   }
   
   @media (max-width: 800px){
-    
+    header{
+      flex-direction: column;
+    }
+    .logo{
+      margin: 10px 0;
+    }
   }
