--- a/system/crud/static/crud/css/login.css
+++ b/system/crud/static/crud/css/login.css
@@ -21,12 +21,12 @@ body{
 }
 
 .content{
-  width: 100%;
+  width: 50%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 30px;
+  padding: 25px 15px;
 }
 
 form{
@@ -60,6 +60,7 @@ form{
 }
 
 .car-image{
+  width: 50%;
   display: block;
 }
 
@@ -85,19 +86,25 @@ form{
     height: auto;
   }
   
+  .forms{
+    display: block;
+  }
+  
   .box-index{
     flex-direction: column-reverse;
-    align-items: center;
+    margin-top: 10px;
+    max-width: 300px;
   }
 
   .content{
-   
+    width: 100%;
+    padding: 15px 0 30px 0;
   }
 
   .car-image{
-    max-width: 350px;
+    width: 100%;
   }
-
+  
   .car-image > img{
     border-radius: 15px 15px 0 0;
   }
