--- a/system/crud/static/crud/css/header.css
+++ b/system/crud/static/crud/css/header.css
@@ -15,7 +15,7 @@
 header{
     display: flex;
     background-color: var(--form-background);
-    width: 100vw;
+    /* width: 100vw; */
     justify-content: space-between;
     align-items: center;
     padding: 10px;
